# MinecraftServerManager

./: .gitattributes  .gitignore  CHANGELOG.md  COPYING.md  README.md  build.spec  minecraft_server_manager.py  pyproject.toml  quick_test.py  requirements.txt
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  renovate.json
.github/actions/setup-python-env/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: Advanced security and quality scanning.yml  build-release.yml  ci-test.yml  codeql.yml  oss-scorecard.yml  validate-renovate.yml
assets/: version_info.txt
docs/: CODE_REVIEW_AND_COMPLIANCE.md  PLAGIARISM_DETECTION_TOOLS.md  PORTABLE_INSTALLER_MATRIX.md  TECHNICAL_OVERVIEW.md  USER_GUIDE.md
report/: comprehensive_report.py
scripts/: build.bat  build_installer.bat  build_installer_nuitka.bat  build_installer_nuitka.py  build_nuitka.bat  cleanup.bat  format_lint_check.bat  installer.iss  package-portable.bat  package-portable.ps1  update-portable.bat  version_check.py
src/: __init__.py  main.py  models.py  version_info.py
src/core/: __init__.py  exceptions.py  loader_manager.py  mod_manager.py  properties_helper.py  server_detection.py  server_instance.py  server_manager.py  version_manager.py
src/models/: __init__.py  models.py
src/ui/: __init__.py  create_server_frame.py  custom_dropdown.py  dialog_utils.py  font_manager.py  icon_utils.py  main_window.py  manage_server_frame.py  mod_management.py  mod_search_service.py  progress_dialog.py  server_monitor_window.py  server_properties_dialog.py  task_utils.py  tree_utils.py  ui_config.py  virtual_list.py  window_preferences_dialog.py
src/utils/: __init__.py  app_restart.py  atomic_writer.py  background_task.py  constants.py  dependency_plan_serializer.py  exception_utils.py  font_manager.py  hash_utils.py  http_utils.py  java_downloader.py  java_utils.py  loader_constants.py  loader_detector.py  log_utils.py  logger.py  memory_utils.py  mod_index_manager.py  mod_provider_metadata.py  modrinth_query_utils.py  path_utils.py  request_retry_utils.py  runtime_paths.py  server_detection_utils.py  server_detection_version_utils.py  server_jar_locator.py  server_properties_utils.py  server_runtime_utils.py  server_utils.py  settings_manager.py  singleton.py  subprocess_utils.py  system_utils.py  ui_test_framework.py  ui_utils.py  update_checker.py  update_parsing.py  window_manager.py
src/utils/core_utils/: atomic_writer.py  exception_utils.py  hash_utils.py  logger.py  path_utils.py
src/utils/java_support/: java_downloader.py  java_utils.py
src/utils/mod_utils/: dependency_plan_serializer.py  local_mod_metadata_utils.py  mod_dependency_planner.py  mod_dependency_reference_utils.py  mod_index_manager.py  mod_provider_metadata.py  mod_revalidation_batch_utils.py  mod_semantics.py  mod_version_filtering.py  modrinth_query_utils.py  modrinth_version_lookup.py
src/utils/network_utils/: http_utils.py
src/utils/runtime_utils/: app_restart.py  background_task.py  runtime_paths.py  settings_manager.py  singleton.py  subprocess_utils.py  system_utils.py
src/utils/server_utils/: server_detection_utils.py  server_detection_version_utils.py  server_memory_utils.py  server_properties_utils.py  server_runtime_utils.py
src/utils/ui_support/: ui_tokens.py  ui_utils.py  window_manager.py
src/utils/update_utils/: update_checker.py  update_parsing.py
src/version_info/: __init__.py  version_info.py
tests/: conftest.py  dependency_reference_cases.json  test_atomic_writer.py  test_create_server_name_integration.py  test_dependency_reference_fixture_regression.py  test_loader_manager_smoke.py  test_local_mod_metadata_utils.py  test_manage_server_frame_smoke.py  test_mod_dependency_planner.py  test_mod_dependency_reference_utils.py  test_mod_index_manager_smoke.py  test_mod_management_list_smoke.py  test_mod_manager_provider_orchestration_smoke.py  test_mod_provider_metadata_smoke.py  test_mod_revalidation_batch_utils.py  test_mod_version_filtering.py  test_modrinth_online_smoke.py  test_modrinth_query_utils.py  test_modrinth_version_lookup.py  test_path_utils_json_smoke.py  test_request_retry_utils.py  test_server_instance_skeleton.py  test_server_properties_utils_smoke.py  test_settings_io_smoke.py  test_subprocess_utils_smoke.py  test_ui_utils_pool_tuning.py  test_update_checker_path_script.py  test_update_parsing_fallback_smoke.py  test_version_parsing_smoke.py  test_window_manager_dpi_matrix_smoke.py
