[project]
name = "minecraft-server-manager"
dynamic = ["version"]
description = "Minecraft 伺服器管理器"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { file = "LICENSE" }

dependencies = [
  "toml>=0.10.2",
  "customtkinter>=5.2.2",
  "requests>=2.32.5",
  "defusedxml>=0.7.1",
  "markdown>=3.9",
  "packaging>=25.0",
  "javaproperties>=0.8.2",
]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "types-toml>=0.10.8.20240310",
  "nuitka>=2.8.9",
  "types-requests>=2.31.0.20240406",
  "uv>=0.6.0",
  "ruff>=0.14.0",
  "types-markdown>=3.10.0.20251106",
  "pytest>=8.4.2",
  "bandit>=1.8.0",
  "bandit-sarif-formatter>=1.0.0",
]

[project.scripts]
minecraft-server-manager = "src.main:main"

[tool.mypy]
# 預設採用嚴格模式；若新增無型別第三方套件，請在 overrides 逐一放行。
ignore_missing_imports = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["customtkinter", "customtkinter.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]
extend-exclude = ["report", "assets"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "UP",
  "B",
  "C4",
  "SIM",
  "PIE",
  "T20",
  "RET",
  "ARG",
  "ERA",
  "RUF",
]
ignore = ["E402", "B023", "E501", "RUF001", "RUF002", "RUF003"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.dynamic]
version = {attr = "src.version_info.version_info.APP_VERSION"}

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: minimal smoke coverage for core flows",
  "integration: focused integration coverage for key UI/business flows",
]
