[project]
name = "minecraft-server-manager"
dynamic = ["version"]
description = "Minecraft 伺服器管理器"
readme = "README.md"
requires-python = ">=3.10, <3.15"
license = { file = "LICENSE" }

dependencies = [
  "toml>=0.10.2",
  "customtkinter>=5.2.2",
  "requests>=2.33.0",
  "defusedxml>=0.7.1",
  "markdown>=3.10.2",
  "packaging>=26.0",
  "javaproperties>=0.8.2",
]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "types-toml>=0.10.8.20240310",
  "nuitka>=4.0.7",
  "types-requests>=2.33.0.20260327",
  "uv>=0.11.2",
  "ruff>=0.15.8",
  "types-markdown>=3.10.2.20260211",
  "pytest>=9.0.2",
  "bandit>=1.9.4",
  "bandit-sarif-formatter>=1.1.1",
  "vulture>=2.16",
  "eradicate>=3.0.1",
  "detect-secrets>=1.5.0",
]

[project.scripts]
minecraft-server-manager = "src.main:main"

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["customtkinter", "customtkinter.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]
extend-exclude = ["report", "assets"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "UP",
  "B",
  "C4",
  "SIM",
  "PIE",
  "T20",
  "RET",
  "ARG",
  "ERA",
  "RUF",
]
ignore = ["E402", "B023", "E501", "RUF001", "RUF002", "RUF003"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.dynamic]
version = {attr = "src.version_info.version_info.APP_VERSION"}

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: minimal smoke coverage for core flows",
  "integration: focused integration coverage for key UI/business flows",
]
